@@ -3,6 +3,11 @@ PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-
 * Changes since Version 0.4.1:
 ** Modifications, Fixes and Improvements:
 - Updated the PEL init.el template to better support benchmark-init on Emacs 30.
+  - The version of init.el is now 0.3.  PEL now requires that version to support fast startup,
+    even on old systems.  This is a *breaking change* but it's easy to fix: just update your
+    init.el file to comply with the new [[https://github.com/pierre-rouleau/pel/blob/master/example/init/init.el][init template.]]
+    - You will only be required to update it if you want to use the PEL package statistics or switch to
+      the fast startup mode.
 - The *pel-emacs-load-stats* command now also show Emacs startup time.
 - Fix the re-installation of the *indent-tools-hydra/body* key binding to ~<f7> <TAB>~ when *pel-init* is re-executed.
   That happens when we need to re-initialize after changing a *pel-use-...* user option and want to activate it without leaving
